// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@coveo/create-atomic-component when called in an existing project when initializing should ouptut a confirmation message upon success 1`] = `""`;

exports[`@coveo/create-atomic-component when called in an existing project when initializing should setup a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "On2XOtGKsiCQNf3sl4iW9KMVbUE=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "dk1NzEu4Fb2ZY6TKzt21xMFvc2c=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "2XR/MKCv0fo3uRpZRiTyOBoHk7s=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "tGVlR0ig5LSS79ZPOfuAFDEvqMw=",
              "name": "index.ts",
            },
          ],
          "hash": "xRG1Nufl9fjocyirZh0onW5WXDE=",
          "name": "pages",
        },
      ],
      "hash": "CGU/7aBOxi+ste/Dh/12CF3SkWI=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "wLp7j9Fx1uWzj1DY9ZTalVbJ0PY=",
  "name": "no-args",
}
`;

exports[`@coveo/create-atomic-component when called with a valid component name when initializing should ouptut a confirmation message upon success 1`] = `""`;

exports[`@coveo/create-atomic-component when called with a valid component name when initializing should setup a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "On2XOtGKsiCQNf3sl4iW9KMVbUE=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "dk1NzEu4Fb2ZY6TKzt21xMFvc2c=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "2XR/MKCv0fo3uRpZRiTyOBoHk7s=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "tGVlR0ig5LSS79ZPOfuAFDEvqMw=",
              "name": "index.ts",
            },
          ],
          "hash": "xRG1Nufl9fjocyirZh0onW5WXDE=",
          "name": "pages",
        },
      ],
      "hash": "CGU/7aBOxi+ste/Dh/12CF3SkWI=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "wLp7j9Fx1uWzj1DY9ZTalVbJ0PY=",
  "name": "valid-arg",
}
`;

exports[`@coveo/create-atomic-component when called without any args when initializing should ouptut a confirmation message upon success 1`] = `""`;

exports[`@coveo/create-atomic-component when called without any args when initializing should setup a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "On2XOtGKsiCQNf3sl4iW9KMVbUE=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "dk1NzEu4Fb2ZY6TKzt21xMFvc2c=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "2XR/MKCv0fo3uRpZRiTyOBoHk7s=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "tGVlR0ig5LSS79ZPOfuAFDEvqMw=",
              "name": "index.ts",
            },
          ],
          "hash": "xRG1Nufl9fjocyirZh0onW5WXDE=",
          "name": "pages",
        },
      ],
      "hash": "CGU/7aBOxi+ste/Dh/12CF3SkWI=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "wLp7j9Fx1uWzj1DY9ZTalVbJ0PY=",
  "name": "no-args",
}
`;
